fixed bug on safari

--- a/src/frontend/styles/app.styl
+++ b/src/frontend/styles/app.styl
@@ -24,7 +24,6 @@ html
 	margin  0
 	padding 0
 	border  0
-	user-select: none
 
 a
 	color: inherit
